# docs/swagger.json
@@ -5385,8 +5385,14 @@
                 "permissions": {
                     "type": "string"
                 },
+                "revoke_reason": {
+                    "type": "string"
+                },
                 "revoked_at": {
                     "type": "string"
+                },
+                "revoked_by": {
+                    "type": "integer"
                 },
                 "usage_count": {
                     "type": "integer"
